--- a/files/index.html
+++ b/files/index.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
 <html>
-	<body bgcolor:"blue">
-		<h1>Hello acloud guru</h1>
-	</body>
+<head>
+<style>
+        body {
+                background-color: #4B0082
+        }
+</style>
+</head>
+<body>hello</body>
 </html>
 
