--- a/files/index.html
+++ b/files/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
         body {
-                background-color: #4B0082
+                background-color: #E6E6FA
         }
 </style>
 </head>
